ingres-controller/default-backend-dc-sg.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2019-08-29T17:15:44Z
  generation: 1
  name: default-backend
  namespace: ingress-space
  resourceVersion: "944"
  selfLink: /apis/extensions/v1beta1/namespaces/ingress-space/deployments/default-backend
  uid: a2b05449-ca80-11e9-914c-0242ac110054
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: default-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: default-backend
    spec:
      containers:
      - image: kodekloud/ecommerce:404
        imagePullPolicy: Always
        name: simple-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-08-29T17:15:54Z
    lastUpdateTime: 2019-08-29T17:15:54Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-08-29T17:15:44Z
    lastUpdateTime: 2019-08-29T17:15:54Z
    message: ReplicaSet "default-backend-6655866f9d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
