ingres-controller/default-backend-svc-sg.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2019-08-29T17:15:44Z
  name: default-http-backend
  namespace: ingress-space
  resourceVersion: "882"
  selfLink: /api/v1/namespaces/ingress-space/services/default-http-backend
  uid: a2b298c5-ca80-11e9-914c-0242ac110054
spec:
  clusterIP: 10.101.46.38
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
